# voice-of-callisto

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml
docs/superpowers/plans/: 2026-05-29-voice-of-callisto-enhancements-plan.md  2026-05-29-voice-of-callisto.md
docs/superpowers/specs/: 2026-05-29-voice-of-callisto-design.md  2026-05-29-voice-of-callisto-enhancements-design.md
engine/: __init__.py  audio.py  mixer.py  organ.py  oscillator.py  recorder.py  tunings.py
gui/: __init__.py  main_window.py  midi_panel.py  recorder.py  stop_panel.py  swell.py
organum/: CONTRIBUTING.md  pyproject.toml
organum/engine/: __init__.py  envelope.py  midi_player.py  organ.py  oscillator.py
organum/gui/: drawbar_presets.py  drawbars.py  keyboard.py  main_window.py  room_panel.py  stop_panel.py
organum/stops/: __init__.py  profiles.py
organum/tests/: test_envelope.py  test_mixer.py  test_voice.py
stops/: __init__.py  profiles.py
tests/: test_oscillator.py  test_performance.py  test_voice.py
