[project]
name = "organum"
version = "0.1.0"
description = "Real-time pipe organ synthesizer with additive synthesis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mido>=1.3.3",
    "numpy>=2.4.2",
    "pyqt6>=6.10.2",
    "sounddevice>=0.5.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
